# case-data-engineer

./: .gitignore  EXECUTIVE_SUMMARY.md  README.md  pipeline_dag.json  pyproject.toml
diagrams/: architecture.mmd
docs/: BI_RUNBOOK.md  GLOSSARY.md  NAMING_CONVENTIONS.md  TABLES.md  architecture.html  architecture.md  business_questions.md  data_model.md  data_quality.md
docs/adr/: ADR-001-bronze-as-string.md  ADR-002-scd1-vs-scd2.md  ADR-003-medallion-3-layer.md  ADR-004-free-edition-vs-premium.md  ADR-005-dq-flags-vs-dlq.md
docs/archive/: SHIPPED_CASE_LEVVA_FORENSIC_2026-05-12.md
docs/screenshots/: README.md
docs/slides/: case_levva.html
notebooks/00_setup/: 00_exploration.py  00_rename_schemas.py  01_apply_governance.py  99_validation.py
notebooks/01_bronze/: 01_bronze_ingest.py
notebooks/02_silver/: 02_silver_canais.py  02_silver_clientes.py  02_silver_entregas.py  02_silver_ocorrencias.py  02_silver_pedidos.py  02_silver_produtos.py  02_silver_regioes.py  02_silver_vendedores.py
notebooks/03_gold/: 03_gold_dimensions.py  04_gold_facts.py  05_gold_kpis.py
notebooks/utils/: config.py  data_helpers.py
tests/: conftest.py  test_data_helpers.py
